plugins {
    id 'java'
    id 'application'
}

group 'fr.benco11'
version '1.0'

targetCompatibility = sourceCompatibility = 17
compileJava.options.encoding = 'UTF-8'

archivesBaseName = 'JavaQuarium'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

application {
    mainClass = "fr.benco11.javaquarium.JavaQuarium"
}

jar {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
}

test {
    useJUnitPlatform()
}

javadoc {
    source = sourceSets.main.allJava
    options.encoding = 'UTF-8'
    options.addStringOption('source', '17')
    options.addBooleanOption('-enable-preview', true)
    docsDirName = '../docs/'
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    classifier = 'javadoc'
    from javadoc.destinationDir
}

artifacts {
    archives javadocJar
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
